syntax = "proto3";

package com.firsttimeinforever.chat;

import "google/protobuf/timestamp.proto";

message ChatMessage {
    string from = 1;
    string text = 2;
}

message ChatMessageFromServer {
    google.protobuf.Timestamp timestamp = 1;
    ChatMessage message = 2;
}

service ChatService {
    rpc chat(stream ChatMessage) returns (stream ChatMessageFromServer);
}
